# GoBudget

./: .env.example  .env.production  .env.test  .gitignore  DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  README.md  docker-compose.yml  health-check.sh  main.py  project.md  pyproject.toml  pytest.ini  run-local-tests.sh  test_api.py  test_upload.py  todo.md  vps-setup.sh
.github/prompts/: revise.prompt.md
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  requirements.txt  test_db.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  categories.py  dashboard.py  outlook.py  persons.py  receipts.py  settings.py  transactions.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/components/: Filters.tsx
frontend/src/context/: SettingsContext.tsx
frontend/src/icons/: index.tsx
frontend/src/layout/: AdminLayout.tsx  AppHeader.tsx  AppSidebar.tsx  Backdrop.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.tsx  dashboard.tsx  data-input.tsx  expenses.tsx  income-overview.tsx  income.tsx  index.tsx  investments.tsx  login.tsx  profile.tsx  receipt-upload.tsx  register.tsx  savings.tsx  settings.tsx  spending-overview.tsx  (+3 more)
issues/: 1.md  Enhance-Signup-and-Login-Pages.md
nginx/: site.conf
nginx/snippets/: security-headers.conf
tests/: README.md  requirements.txt  run_tests.py  test_api.py  test_database.py  test_normalize_totals.py  test_normalize_totals_standalone.py  test_receipt_fields.py  test_receipt_integration.py  test_receipt_processing.py  test_upload.py
(+5 files in other folders)
