[project]
name = "gobudget"
version = "0.1.0"
description = "Go Budget - Track and manage finances with intuitive dashboards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "pydantic",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "psycopg2-binary",
    "python-dotenv",
    "httpx",
    "msal",
    "pandas>=2.3.2",
    "azure-identity>=1.25.0",
    "msgraph-sdk>=1.45.0",
    "requests>=2.32.5",
    "pytest>=8.4.2",
    "python-dateutil==2.8.2",
]
